<resources>
    <string name="app_name">FreeCycle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">Listings</string>
    <string name="menu_add">Add a Listing</string>
    <string name="menu_about">About</string>

    <string name="button_addListing">Add Listing</string>
    <string name="hint_listingName">Name</string>
    <string name="hint_userTextLocation">Location</string>
    <string name="hint_userEircode">Eircode</string>
    <string name="hint_listingTitle">Listing Title</string>
    <string name="hint_listingDescription">Listing Description</string>
    <string name="addListingHeader">Add a Listing</string>
    <string name="menu_addListing">Add Listing</string>
    <string name="menu_cancelListing">Cancel</string>
    <string name="all_fields_required"> All fields are required </string>
    <string name="save_listing"> Save Listing </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_listing_image">Select Listing Image</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="edit_image"> Edit Image </string>
    <string name="hint_listingImage">Listing Image</string>
    <string name="button_delete_listing">Delete Listing</string>
    <string name="listing_status">Item Available</string>
    <string name="toggle_textOff">Listing Inactive</string>
    <string name="toggle_textOn">Listing Active</string>
    <string name="date_picker">Date Available</string>
    <string name="login">Login</string>
    <string name="firstName"> First Name</string>
    <string name="lastName"> Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup">Sign Up</string>
    <string name="button_location">Set Location</string>
    <string name="button_updateLocation">Update Location</string>
    <string name="date_available">Date Available</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_search">Search</string>
    <string name="search_box">Type search terms here</string>
    <string name="hint_listingContactNumber">Contact Number</string>
    <string name="pickup_location">Pick Up Location</string>
    <string name="listing_image">Listing Image</string>
    <string name="name_title">Name</string>
    <string name="contactNumber_title">Contact Number</string>
    <string name="listingTitle_title">Listing Title</string>
    <string name="listingDescription_title">Listing Description</string>
    <string name="dateAvailable_title">Date Available</string>
    <string name="pickupLocation_title">Pickup Location</string>
    <string name="listingImage_title">Image</string>
    <string name="itemAvailable_title">Item Availability</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="viewMap_button">View Map</string>
    <string name="edit_button">Edit</string>
    <string name="location_not_provided">Location Not Provided</string>
    <string name="profile_image">Profile Image</string>
    <string name="listingError">Error : Couldn\'t Add A Listing</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="messageLoading">Loading....please wait</string>
    <string name="address">Address</string>
    <string name="contact_email">Email</string>
    <string name="freecycle_contact_address">1 Main Street, Dublin</string>
    <string name="freecycle_contact_email">hello@freecycle.com</string>
    <string name="intro">Welcome, please contact us using the details below…</string>
    <string name="night_mode">Night Mode</string>

</resources>