<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimaryLight"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.about.AboutFragment">

    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/simpleTableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </TextView>

        <TableRow

            android:id="@+id/firstRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="17dip"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryLight"
                android:padding="17dip"
                android:text="@string/freecycle_contact_address"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow

            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:id="@+id/contactEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="17dip"
                android:text="@string/contact_email"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/contactEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryLight"
                android:padding="17dip"
                android:text="@string/freecycle_contact_email"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>